--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <p>
       <ul>
         <li><a href="https://github.com/xdlinux/xdba-thesis/zipball/master">最新开发版</a></li>
-        <li><a href="https://github.com/xdlinux/xdba-thesis/zipball/master">0.5 稳定版</a></li>
+        <li><a href="https://github.com/xdlinux/xdba-thesis/zipball/0.5.0">0.5 稳定版</a></li>
       </ul>
       </p>
       <p>获取源代码:
