--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style type="text/css">
       body {
         margin-top: 1.0em;
-        background: #fff repeat url(bg.png) 0 0;
+        background: #e1e1e1 repeat url(http://shellex.info/static/image/body_bg.png) 0 0;
         font-family: Helvetica, Arial, FreeSans, san-serif;
         text-shadow: 1px 1px 0px #FFFFFF;
         color: #000;
