--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style type="text/css">
       body {
         margin-top: 1.0em;
-        background: #e1e1e1 no-repeat url(http://shellex.info/static/image/body_bg.png) 0 0;
+        background: #e1e1e1 repeat url(http://shellex.info/static/image/body_bg.png) 0 0;
         background-attachment: fixed;
         font-family: Helvetica, Arial, FreeSans, san-serif;
         text-shadow: 1px 1px 0px #FFFFFF;
@@ -94,7 +94,7 @@
       <p>
       <ul>
         <li><a href="https://github.com/xdlinux/xdba-thesis/zipball/master">最新开发版</a></li>
-        <li><a href="https://github.com/xdlinux/xdba-thesis/zipball/0.5.0">0.5 稳定版</a></li>
+        <li><a href="https://github.com/xdlinux/xdba-thesis/zipball/0.5.1">0.5 稳定版</a></li>
       </ul>
       </p>
       <p>获取源代码:
