--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style type="text/css">
       body {
         margin-top: 1.0em;
-        background: #e1e1e1 repeat url(http://shellex.info/static/image/body_bg.png) 0 0;
+        background: #e1e1e1 repeat url(body_bg.png) 0 0;
         background-attachment: fixed;
         font-family: Helvetica, Arial, FreeSans, san-serif;
         text-shadow: 1px 1px 0px #FFFFFF;
@@ -35,7 +35,7 @@
 
   <body>
     <a href="https://github.com/xdlinux/xdba-thesis"><img style="position: absolute; top: 0; right: 0; border: 0;"
-      src="https://a248.e.akamai.net/assets.github.com/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" /></a>
+      src="fork.png" alt="Fork me on GitHub" /></a>
 
     <div id="container">
 
