--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 
       <div class="download">
         <a href="https://github.com/xdlinux/xdba-thesis/zipball/master">
-          <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
-        <a href="https://github.com/xdlinux/xdba-thesis/tarball/master">
-          <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
+          <img border="0" width="64" src="zip.png"
+          alt="下载最新开发版"/></a>
+        <span style="margin:0 8px;"></span>
+        <a href="https://github.com/xdlinux/xdba-thesis/commits/master.atom">
+          <img border="0" width="64" src="rss.png" alt="订阅更新">
+        </a>
       </div>
 
       <h1><a href="https://github.com/xdlinux/xdba-thesis">xdba-thesis</a>
