--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         margin-top: 1.0em;
         background: #e1e1e1 repeat url(body_bg.png) 0 0;
         background-attachment: fixed;
-        font-family: Helvetica, Arial, FreeSans, san-serif;
+        font-family: 微软雅黑, Helvetica, Arial, FreeSans, san-serif;
         text-shadow: 1px 1px 0px #FFFFFF;
         color: #000;
       }
