--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
       Xidian Open Source Community &lt;xdl@xdlinux.info&gt;
 
       </p>
+      
+      <h2>最新更新</h2>
+        <ul>
+          <li> 2012 年 1 月 5 日
+          <ul>
+            <li> 加入UTF-8编码和\(X\!\!\!_{\large E}\LaTeX\)支持, 适应 Linux/Mac OS X/Unix 平台。</li>
+            <li> 按惯例调整版式, 目录和摘要左页改为论文题目，摘要改为右开，去掉页码。</li>
+          </ul>
+          </li>
+        </ul>
 
 
       <h2>打包下载</h2>
