--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </p>
       
       <p> 
-      目前暂不打算加入硕士毕业论文和博士生毕业论文，grsnl 开发的<a
+      目前提供实验性硕士毕业论文支持，作者精力限制，暂不打算支持博士生毕业论文，grsnl 开发的<a
         href="http://code.google.com/p/xdthesis/" target="_blank"> xdthesis </a>
       已完成硕士生论文部分，后期有可能将两个项目合并。
       </p>
@@ -94,6 +94,11 @@
       
       <h2>最新更新</h2>
         <ul>
+          <li> 2012 年 1 月 7 日
+          <ul>
+            <li> 实验性硕士生论文格式支持，感谢 Haochen 贡献！</li>
+          </ul>
+          </li>
           <li> 2012 年 1 月 5 日
           <ul>
             <li> 加入UTF-8编码和\(X\!\!\!_{\large E}\LaTeX\)支持, 适应 Linux/Mac OS X/Unix 平台。</li>
