--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
       
       <h2>最新更新</h2>
         <ul>
+          <li> 2012 年 4 月 6 日
+          <ul>
+            <li> 调整公式编号样式，感谢 岚逸 贡献！</li>
+          </ul>
+          </li>
           <li> 2012 年 3 月 28 日
           <ul>
             <li> Bug修复，感谢 岚逸 贡献!</li>
